
Change Log:
----------------------------------------------------------------------

3.2.4
----------------------------------------------------------------------

- Added: Multi-file uploa field type
- Added: Addon to enable product multiple files
- Added: File list incase the product files are more than one
- Refactored: Download code to cater for multiple files via a prameter

3.2.3
----------------------------------------------------------------------

- Fixed: Product shortcode attributes not applied
- Fixed: HTML tags stripped from product description
- Tweaked: Added county Bristol for UK provinces

3.2.2
----------------------------------------------------------------------

- Fixed: PHP 7.1 Compatibility
- Tweaked: Bulk edit sets price to 0
- Tweaked: Global currency option missing in Store Network Settings

3.2.1
----------------------------------------------------------------------

- Fixed: Fatal error with PHP version lower than 5.5

3.2
----------------------------------------------------------------------

- Added: Option for user registration when force login used
- Fixed: Broken digital products link
- Fixed: Global cart products couldn't locate any orders
- Fixed: Use subsite merchant_email in exist instead of global one
- Fixed: Set default variation on single product page
- Fixed: Product image not updating in variable products
- Fixed: Out of stock product does not hide from product list
- Fixed: Compatibility issues with Divi
- Fixed: Cannot add new Attributes when product already have variations
- Fixed: Remove all MP tables when plugin uninstalled
- Fixed: Product price in cart not updated when coupon used
- Fixed: USPS throwing PHP errors
- Fixed: Wrong products list on email notification with global cart
- Fixed: Use a global currency when global cart active
- Fixed: Pass customer shipping info to Stripe
- Fixed: Special instructions field not saved
- Fixed: Variation product order limit always unlimited